--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,15 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'fr.damienc.smash_or_pass'
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
